# id4pii

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  todo.txt
.claude/skills/add-site/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: lock.lottie
crates/app/: Cargo.toml  build.rs
crates/app/src/: batch.rs  cli.rs  extract.rs  install.rs  lib.rs  logging.rs  main.rs  model_setup.rs  progress.rs  serve.rs
crates/app/src/guard/: automation.rs  bridge.rs  bus.rs  engine.rs  feedback.rs  mod.rs  popup.rs  session.rs  store.rs
crates/app/src/proxy/: ca.rs  handler.rs  hosts.rs  mod.rs
crates/core/: Cargo.toml
crates/core/benches/: anonymize.rs  engine.rs
crates/core/data/: README.md
crates/core/examples/: evaluate.rs
crates/core/src/: anonymize.rs  detector.rs  error.rs  eval.rs  json_pii.rs  labels.rs  lib.rs  model_dir.rs  paths.rs  redact.rs
crates/core/src/detect/: mask.rs  mod.rs  model.rs  regex.rs
crates/core/tests/: regex_eval.rs
crates/id4pii/: Cargo.toml  build.rs
crates/id4pii/assets/: forenames.tsv  surnames.tsv
crates/id4pii/benches/: engine.rs
crates/id4pii/data/: pii_dataset.tsv
crates/id4pii/examples/: evaluate.rs
crates/id4pii/src/: batch.rs  cli.rs  corpus.rs  detector_service.rs  document.rs  eval.rs  extract.rs  install.rs  labels.rs  lib.rs  logging.rs  main.rs  model_fetch.rs  model_setup.rs  ops.rs  progress.rs  redact.rs  serve.rs
crates/id4pii/src/daemon/: automation.rs  bridge.rs  bus.rs  engine.rs  feedback.rs  mod.rs  store.rs
crates/id4pii/src/detect/: mask.rs  mod.rs  model.rs  regex.rs
crates/id4pii/src/guard/: bridge.rs  engine.rs  mod.rs
crates/id4pii/tests/: regex_eval.rs
docs/: index.md  privacy.md
extension/: background.js  content.js  logger_main.js  main_world.js  manifest.json  onboarding.css  onboarding.html  onboarding.js
extension/onboarding/: onboarding.css  onboarding.html  onboarding.js
extension/src/adapters/: chatgpt.js  claude.js  gemini.js
extension/src/isolated/: content.js  logger.js  ui.js
extension/src/main/: boot.js  core.js
installer/: README.md  id4pii.iss
scripts/: build-installer.ps1  fetch-pii-dataset.py  generate-wizard-images.py  package-extension.ps1  render_lock_frames.js  strip-comments.py  sync-extension-assets.ps1
scripts/lib/: env.ps1
