[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/wajvandervlugt/id4pii"

[workspace.dependencies]
id4pii-core = { path = "crates/core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = "=2.0.0-rc.12"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
