[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/TBLgGamin/id4pii"

[workspace.dependencies]
id4pii-core = { path = "crates/core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = "=2.0.0-rc.12"
tiktoken-rs = "0.11"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
uiautomation = "0.25"
tao = "0.35"
tray-icon = "0.24"
global-hotkey = "0.8"
arboard = "3"
enigo = "0.6"
tiny-skia = "0.12"
resvg = { version = "0.47", default-features = false }
indicatif = "0.17"
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_Security_Cryptography"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
