[package]
name = "id4pii-app"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "id4pii_app"
path = "src/lib.rs"

[[bin]]
name = "id4pii"
path = "src/main.rs"

[[bin]]
name = "id4pii-guard"
path = "src/bin/id4pii_guard.rs"

[features]

cuda = ["id4pii-core/cuda"]
directml = ["id4pii-core/directml"]

[dependencies]
id4pii-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json.workspace = true
indicatif.workspace = true
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
uiautomation.workspace = true
tao.workspace = true
tray-icon.workspace = true
global-hotkey.workspace = true
arboard.workspace = true
enigo.workspace = true
tiny-skia.workspace = true
windows.workspace = true
include_dir.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints]
workspace = true
