[package]
name = "id4pii-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ort.workspace = true
tiktoken-rs.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
