[package]
name = "id4pii-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ort.workspace = true
tiktoken-rs.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "anonymize"
harness = false

[lints]
workspace = true
