[package]
name = "id4pii"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "id4pii"
path = "src/lib.rs"

[[bin]]
name = "id4pii"
path = "src/main.rs"

[[bin]]
name = "id4pii-daemon"
path = "src/bin/id4pii_daemon.rs"

[features]

cuda = ["ort/cuda"]
directml = ["ort/directml"]

[dependencies]
ort.workspace = true
tiktoken-rs.workspace = true
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["ws"] }
indicatif.workspace = true
futures-util = "0.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.40.1"
pdf-extract = "0.10.0"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
uiautomation.workspace = true
tao.workspace = true
tray-icon.workspace = true
global-hotkey.workspace = true
arboard.workspace = true
enigo.workspace = true
tiny-skia.workspace = true
resvg.workspace = true
windows.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
tiktoken-rs.workspace = true

[[bench]]
name = "engine"
harness = false

[lints]
workspace = true
